Fix some Sonar nags